# chatgpt-ui

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app_api.py  app_lang.py  login.py  main.py  prompt_gpt.ipynb  pyproject.toml  requirements.txt
chatgpt_ui/: main.py
chatgpt_ui.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
chatgpt_ui/configs/: __init__.py  params.py  settings.yaml
chatgpt_ui/src/: app.py  app_lang.py  call_gpt.py  langchain.py  params.py  prompt_langchain.py  ui.py  use_api.py  use_langchain.py  user_registration.py
chatgpt_ui/utils/: auth.py  registration.py  user_registration.py  utils.py
src/: app_lang.py  auth_functions.py  params.py  prompt_lang.py  user_registration.py  utils.py
tests/: test_LCEL.py
