[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-ui"
version = "0.0.1"
authors = [
  { name="John Mwangi", email="john.mwangi@live.com" },
]
description = "A user inteface to large Language models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://chatgpt-ui-jm.streamlit.app/"
# Documentation = ""
Repository = "https://github.com/john-mwangi/chatgpt-ui"
Issues = "https://github.com/john-mwangi/chatgpt-ui/issues"
# Changelog = ""

[tool.setuptools.packages.find]
where = ["chatgpt_ui"]
exclude = ["docs*", "tests*", "files", "*.env"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pattern = ["*.yaml"]